@@ -552,3 +552,7 @@
 2012-08-09  Cedric Bail
 
 	* Improve speed of color_class lookup by using an Eina_Hash.
+
+2012-08-14  Hermet
+
+	* Fix the uv mapping correctly in case of image swallowed.
